Fixed z-index.

--- a/source/css/default.css
+++ b/source/css/default.css
@@ -8,7 +8,7 @@ body { background-color: #E6E9ED; font-smoothing: antialiased; color: #505050; }
 .success { background-color: #8CC152; text-align: center; padding: 8px 10px; font-size: 12px; color: white; }
 .success .fa { margin-right: 5px; }
 
-.mainmenu { position: fixed; right: 25px; top: 13px; font-size: 22px; color: black; opacity: 0.8; z-index: 10; transition: all 0.3s; }
+.mainmenu { position: fixed; right: 25px; top: 13px; font-size: 22px; color: black; opacity: 0.8; z-index: 10; transition: all 0.3s; z-index: 11; }
 .mainmenu:hover { color: black; opacity: 1; }
 .mainmenu .fa-spin { color: black; opacity: 1; }
 
@@ -18,7 +18,7 @@ body { background-color: #E6E9ED; font-smoothing: antialiased; color: #505050; }
 
 .draft .mainmenu { color: #E33733; transform: rotate(90deg); top: 10px; }
 
-.toolbar { left: 0; top: 0; width: 100%; height: 50px; background-color: #E7E9ED; box-shadow: 0 2px 10px rgba(0,0,0,0.05); z-index: 5; position: fixed; box-shadow: inset 0 -2px 10px rgba(0,0,0,0.04), 0 2px 10px rgba(0,0,0,0.05); border-bottom: 1px solid #D9D9D9; z-index: 800; }
+.toolbar { left: 0; top: 0; width: 100%; height: 50px; background-color: #E7E9ED; box-shadow: 0 2px 10px rgba(0,0,0,0.05); z-index: 10; position: fixed; box-shadow: inset 0 -2px 10px rgba(0,0,0,0.04), 0 2px 10px rgba(0,0,0,0.05); border-bottom: 1px solid #D9D9D9; }
 .themedark .toolbar { background-color: #101010; box-shadow: inset 0 2px 10px rgba(255,255,255,0.04), 0 2px 10px rgba(0,0,0,0.2); }
 .toolbar .tabs { margin: 0; }
 .toolbar .tabs a { position: relative; display: inline-block; padding: 14px 10px 0; height: 49px; color: gray; border-right: 1px solid #D9D9D9; font-size: 14px; outline: 0; min-width: 90px; text-align: center; max-width: 120px; text-overflow: ellipsis; overflow: hidden; white-space: nowrap; }
